# MHW-Internal

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Monter Hunter World Trainer.lnk
experimental/: detour_hook.cpp  detour_hook.hpp  hooking.cpp  hooking.hpp
injector/src/: main.cpp
injector/src/process/: process.hpp
scripts/: imgui.cmake  quickjs.cmake  websocket.cmake
src/: benchmark.hpp  byte_patching.cpp  byte_patching.hpp  common.cpp  common.hpp  detour_hook.cpp  function_types.hpp  gui.cpp  hardware_breakpoint.cpp  hardware_breakpoint.hpp  hook_manager.cpp  hook_manager.hpp  hooking.cpp  hooking.hpp  logger.hpp  main.cpp  midfunc_hook_manager.cpp  midfunc_hook_manager.hpp  midfunction_hook.cpp  midfunction_hook.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  script.cpp  settings.hpp  thread_pool.cpp
src/class/: fwddec.hpp
src/event_loop/: backend_events.cpp  backend_events.hpp
src/events/: backend_events.cpp
src/features/: player.cpp  player.hpp  weapon.cpp  weapon.hpp
src/file_manager/: folder.cpp
src/hooking/: base.cpp  base.hpp  detour_hook.cpp  detour_hook.hpp  hooking.cpp  hooking.hpp
src/hooks/: bow_gun_effect.cpp  consumable.cpp  deploy_character.cpp  equipment_crafting.cpp  frostcraft_drawn_asm.asm  frostcraft_sheathed_asm.asm  glaive_spirit_gauge.cpp  great_sword_charges.cpp  high_rank_exp_mult.cpp  highlighted_armour.cpp  highlighted_weapon.cpp  infinite_gathering.cpp  master_rank_exp_mult.cpp  material_handler.cpp  meal_handler.cpp  monster_on_map.cpp  monster_part_breaking.cpp  palico_experience_handler.cpp  player_coordinates.cpp  player_forward.cpp  player_position.cpp  process_event.cpp  research_experience.cpp  swapchain_hook.cpp  use_item.cpp  waypoint.cpp
src/hooks/shellcode/: equipment_asm.asm  frostcraft_drawn_asm.txt  frostcraft_sheathed_asm.txt  gs_inst_charge_asm.asm  increase_pet_placement_asm.asm  infinite_gathering_asm.txt  player_affinity_stat_asm.asm  player_atk_stat_asm.asm  player_def_stat_asm.asm  player_info_asm.asm  research_experience_asm.asm  selected_item_box_asm.asm
src/logger/: exception_handler.cpp  exception_handler.hpp  logger.cpp  logger.hpp  stack_trace.cpp  stack_trace.hpp
src/memory/: pattern.cpp  pattern.hpp  pattern_batch.cpp  pattern_batch.hpp  pattern_cache.cpp  pattern_cache.hpp  range.cpp
src/menu/: crafting.cpp  crafting.h  equipment_menu.cpp  equipment_menu.h  meal_menu.cpp  meal_menu.h  navigation_menu.cpp  notification.cpp  overlay.cpp  overlay.h  player_menu.cpp  player_menu.h  setting_menu.cpp  teleport_menu.cpp  teleport_menu.h  weapon_buff_menu.cpp  weapon_buff_menu.h  weapon_menu.cpp  weapon_menu.h
src/mhw/: fwddec.hpp
src/server/: server_module.hpp  socket_client.hpp
src/server/alpha/: alpha_module.hpp  alpha_service.hpp
src/server/alpha/data/: status.hpp
src/server/enums/: auth_status.hpp  connection_status.hpp
src/services/character/: character_service.cpp  character_service.hpp
src/services/equipment/: armour_service.cpp  armour_service.hpp  weapon_service.cpp  weapon_service.hpp
src/services/equipment/data/: equipment_data.hpp
src/services/gui/: gui_service.hpp
src/services/meal/: meal_data.hpp  meal_service.cpp  meal_service.hpp
src/services/monster/: monster_service.cpp  monster_service.hpp
src/services/monster/data/: monster_data.hpp
src/services/world/: world_service.cpp  world_service.hpp
src/services/world/data/: world_data.hpp
src/utility/: fnv1a.hpp  mhw.hpp  subprocess.hpp
